--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,7 +1,35 @@
 <ion-view view-title="Settings">
   <ion-content>
+    <div class="list">
+
+      <a class="item item-icon-left" ui-sref="profile">
+        <i class="icon ion-person"></i>
+        Profile
+      </a>
+
+      <a class="item item-icon-left item-icon-right" href="#">
+        <i class="icon ion-chatbubble-working"></i>
+        Call Ma
+        <i class="icon ion-ios-telephone-outline"></i>
+      </a>
+
+      <a class="item item-icon-left" href="#">
+        <i class="icon ion-mic-a"></i>
+        Record album
+        <span class="item-note">
+          Grammy
+        </span>
+      </a>
+
+      <a class="item item-icon-left" href="#">
+        <i class="icon ion-person-stalker"></i>
+        Friends
+        <span class="badge badge-assertive">0</span>
+      </a>
+
+    </div>
     <div class="padding text-center">
-      <button ng-click="logout()" class="button button-clear button-assertive">Logout</button>
+      <button ng-click="logout()" class="button button-assertive">Logout</button>
     </div>
   </ion-content>
 </ion-view>
